# llvm_playground

./: BuildPassContainer.dockerfile  README.md  docker-compose.yaml
src/: CMakeLists.txt
src/FindStoreValuesPass/: CMakeLists.txt  FindStoreValuesPass.cpp  FindStoreValuesPass.h
src/PlaygroundPass/: CMakeLists.txt  PlaygroundPass.cpp  PlaygroundPass.h
src/TestPrograms/: DynamicStructs.c  StoreFunction.c
